# crabgrep

./: Cargo.toml  readme.md
src/: main.rs  output.rs  search.rs
